fix spacing around recipe steps

--- a/src/sass/partials/_recipe-steps.scss
+++ b/src/sass/partials/_recipe-steps.scss
@@ -1,6 +1,5 @@
 .recipe-steps {
     list-style: none;
-    padding: 0;
 }
 
 .recipe-step {
@@ -8,11 +7,11 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    margin-bottom: 12px;
 
     @include mq(tablet) {
         margin-right: 340px;
         height: auto;
-        margin-bottom: 12px;
     }
 
     .container {
@@ -80,6 +79,8 @@
     height: 72px;
     border-radius: 48px;
     margin: 0 24px 0 11px;
+    flex-grow: 0;
+    flex-shrink: 0;
     background-color: $c-white;
 }
 
